--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.26.0"}
+requests = "^2.31.0"
+aws-xray-sdk = "^2.12.1"
 
 
 [tool.poetry.group.dev.dependencies]
