--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ aws-xray-sdk = "^2.12.1"
 python-dotenv = "^1.0.0"
 python-jose = "^3.3.0"
 pydantic = "^2.4.2"
+sqlalchemy = "^2.0.23"
+alembic = "^1.12.1"
 
 
 [tool.poetry.group.dev.dependencies]
