--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-jose = "^3.3.0"
 pydantic = "^2.4.2"
 sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
+pymysql = "^1.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
