--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^2.4.2"
 sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
 pymysql = "^1.1.0"
+cryptography = "^41.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
