--- a/layers/dependencies/requirements.txt
+++ b/layers/dependencies/requirements.txt
@@ -1,16 +1,26 @@
+alembic==1.12.1 ; python_version >= "3.11" and python_version < "4.0"
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 aws-lambda-powertools[aws-sdk]==2.26.0 ; python_version >= "3.11" and python_version < "4.0"
 aws-xray-sdk==2.12.1 ; python_version >= "3.11" and python_version < "4.0"
 boto3==1.28.78 ; python_version >= "3.11" and python_version < "4.0"
 botocore==1.31.78 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
+cryptography==41.0.5 ; python_version >= "3.11" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
+greenlet==3.0.1 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
+mako==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
+marshmallow==3.20.1 ; python_version >= "3.11" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
+pymysql==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 python-jose==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -18,6 +28,7 @@ requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 s3transfer==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.23 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.0.7 ; python_version >= "3.11" and python_version < "4.0"
 wrapt==1.15.0 ; python_version >= "3.11" and python_version < "4.0"
