--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
 pymysql = "^1.1.0"
 cryptography = "^41.0.5"
+marshmallow = "^3.20.1"
 
 
 [tool.poetry.group.dev.dependencies]
